Rename heuristics.js => sifter.js

--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
   <script src="util.js"></script>
   <script src="sim.js"></script>
   <script src="app.js"></script>
-  <script src="heuristics.js"></script>
+  <script src="sifter.js"></script>
 </body>
 </html>
